crates/rstest-bdd/tests/fixtures_macros/step_struct_pattern.stderr
error: invalid step function signature: unsupported parameter pattern `User`; use a simple identifier (e.g., `arg: T`)

         = help: Use a plain identifier in the parameter pattern (e.g., `user: User`) instead of destructuring patterns.

  --> tests/fixtures_macros/step_struct_pattern.rs:11:21
   |
11 | fn step_with_struct(User { name }: User) {}
   |                     ^^^^
